# trashflow

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.design-import/: README.md
apps/ml/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml  railway.toml  requirements.txt
apps/ml/app/: __init__.py  classifier.py  config.py  image_magic.py  main.py  schemas.py
apps/ml/notebooks/: finetune_yolov8.ipynb
apps/ml/tests/: test_classify.py  test_image_magic.py
docs/: API.md  ARCHITECTURE.md  COMMUNITY_QUESTIONS.md  DATABASE.md  DEMO_SCRIPT.md  HARDWARE_PROCUREMENT.md  ML_TRAINING.md  ROADMAP.md  SECURITY.md  SETUP.md  WAKE_UP.md
supabase/: config.toml  seed.sql
бульбашка - Пошук Зображення_files/: ODF.0ttoAxLIbUEbHRidbd8PUA  ODF.17uw9e6i9bVr7KAAs7TlqQ  ODF.28eNnhsU27WMtf-L_zxheg  ODF.5VUzcpezp1YXKNPSF9Vzog  ODF.6ai1QtE2APhobzU7i6bwYw  ODF.6sxJzA7i-tlHmudpAyyozA  ODF.DP-YZGysYRri-d101Xq3Iw  ODF.DbgwA0PxwJlgeH7gnBQG3A  ODF.EBO0KJkDetbbmVl8yvW9eg  ODF.Ea6XcfMwO5AVl-SeVinOcA  ODF.FHVUtaiEL78AuqOYjZ2Y9A  ODF.H8SJTQRZ_5LtOSvJh0MHOA  ODF.If4Er1TusC-RG5NCSD14Bw  ODF.Kqs3-8Ko2MMrmyg3D8vBLA  ODF.LEN0h7Fbic2QhCNRQIkoxQ  ODF.LXQhQIVp-09DiOLAknvQEA  ODF.Ln2C5bb6SRbuUGUigD-I5w  ODF.LyLyggCIUcph7jq0pmHKUQ  ODF.Mk8MW5bPaRvJJHP_i_lNIA  ODF.QWZuOtae_9CMb0dvMI42cQ  ODF.UglBgZ476KQd7QiVINIhNA  ODF._9IdC_AEBG9T-PkUvDuQwA  ODF.cWvzm2pBGXd7CiR5KPb3jQ  ODF.f1DsM2YAiaRWJbvKq-xsyg  ODF.fIM50RJRl_7bImkNbXTi4g  ODF.fd4c4dWsVIBZ5tjJUCiK-Q  ODF.lqP2j14jNliw4q28FFfwIw  (+80 more)
(+169 files in other folders)
