[tool.poetry]
name = "trashflow-ml"
version = "0.0.0"
description = "TrashFlow CV service — YOLOv8 fine-tuned on TACO for 5 waste classes"
authors = ["Maksym Lytvynenko <maksym.lytvynenko2008@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
python-multipart = "^0.0.20"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
pillow = "^11.0.0"
ultralytics = "^8.3.60"
torch = "^2.5.1"
numpy = "^2.2.1"
sentry-sdk = { extras = ["fastapi"], version = "^2.19.2" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
ruff = "^0.8.4"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure-function unit tests (no FastAPI client, no model load)",
    "integration: hits the FastAPI test client, may load model weights",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
